<resources>
    <string name="app_name">RocketMan</string>
    <string name="app_slogan">Sky is NOT the limit!</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="nav_events">Events</string>
    <string name="nav_company_data">About company</string>
    <string name="nav_rocket_list">Rocket list</string>
    <string name="nav_rocket_detail">Rocket detail</string>
    <string name="nav_launch_list">Launches</string>

    <string name="label_company_employees">Employees</string>
    <string name="label_company_vehicles">Vehicles</string>
    <string name="label_company_launch">Launch sites</string>
    <string name="label_company_test">Test sites</string>
    <string name="label_company_valuation">Valuation</string>
    <string name="label_company_hq">Headquarters</string>

    <string name="check_rocket_detail_active">Active</string>
    <string name="text_toolbar_rocket_list_active">Active rockets only?</string>

    <string name="menu_refresh">Refresh</string>

    <string name="menu_sort_asc">Ascending</string>
    <string name="menu_sort_desc">Descending</string>

    <string name="menu_launch_past">Past launches</string>
    <string name="menu_launch_upcoming">Upcoming launches</string>
    <string name="menu_launch_all">All launches</string>
    <string name="nav_launch_detail">Launch detail</string>

    <string name="check_launch_detail_success">Successful</string>
    <string name="check_launch_detail_tdb">TDB</string>
    <string name="check_launch_detail_net">Net</string>

</resources>