<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        app:showAsAction="ifRoom"
        />

    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/menu_past"
            android:title="@string/menu_launch_past"
            />
        <item
            android:id="@+id/menu_upcoming"
            android:title="@string/menu_launch_upcoming"
            />
        <item
            android:id="@+id/menu_all"
            android:checked="true"
            android:title="@string/menu_launch_all"
            />
    </group>

</menu>