<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_home"
        >
        <item
            android:id="@+id/nav_events"
            android:checked="true"
            android:checkable="true"
            android:icon="@drawable/ic_event"
            android:title="@string/nav_events"
            />
    </group>

    <group
        android:id="@+id/menu_lists"
        >
        <item
            android:id="@+id/nav_rocket"
            android:checkable="true"
            android:icon="@drawable/ic_rocket"
            android:title="@string/nav_rocket_list"
            />

        <item
            android:id="@+id/nav_launch"
            android:checkable="true"
            android:icon="@drawable/ic_rocket_launch"
            android:title="@string/nav_launch_list"
            />
    </group>

    <group
        android:id="@+id/menu_about"
        >
        <item
            android:id="@+id/nav_company"
            android:checkable="true"
            android:icon="@drawable/ic_company"
            android:title="@string/nav_company_data"
            />
    </group>

</menu>