<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_spacex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/widget_margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_founder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="founder: Elon Musk"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_margin_xlarge"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_founder"
            tools:text="Lorem Ipsum"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_resources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/widget_margin_large"
            android:layout_marginHorizontal="@dimen/margin_company_table"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_description"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_employees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/label_company_employees"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_employees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="99"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_vehicles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_employees"
                android:text="@string/label_company_vehicles"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_vehicles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_employees"
                tools:text="89"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_launch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_vehicles"
                android:text="@string/label_company_launch"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_launch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_vehicles"
                tools:text="79"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_launch"
                android:text="@string/label_company_test"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_launch"
                tools:text="69"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_valuation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_resources"
            android:layout_marginTop="@dimen/widget_margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/label_company_valuation"
            android:textStyle="bold"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_valuation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_valuation"
            tools:text="69bn USD"
            />
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_hq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_valuation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/label_hq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/widget_margin_large"
                android:text="@string/label_company_hq"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_hq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/label_hq"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="Hybernska 69 Praha"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/widget_margin_small"
                android:background="@drawable/ic_baseline_location_on_24"
                app:layout_constraintBottom_toBottomOf="@id/label_hq"
                app:layout_constraintStart_toEndOf="@id/label_hq"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>