<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/widget_margin_medium">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_text_header"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Elton John"
        />

    <CheckBox
        android:id="@+id/check_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:clickable="false"
        android:text="@string/check_launch_detail_success"
        android:textSize="@dimen/size_text_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_success"
        tools:text="first flight here and there"
        />

    <ScrollView
        android:id="@+id/layout_technical"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:layout_height="@dimen/size_rocket_detail_technical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_date"
        android:fadeScrollbars="false"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_rocket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="CRS 02"
                />

            <CheckBox
                android:id="@+id/check_tdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_launch_detail_tdb"
                />

            <CheckBox
                android:id="@+id/check_net"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_launch_detail_net"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Window: 0"
                />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_technical"
        tools:text="Very very long text"
        />

    <ImageView
        android:id="@+id/img_launch"
        android:layout_width="@dimen/size_rocket_detail_img"
        android:layout_height="@dimen/size_rocket_detail_img"
        android:layout_marginTop="@dimen/widget_margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_description"
        />

</androidx.constraintlayout.widget.ConstraintLayout>